# skypilot-mcp

./: .mcp.json  .pre-commit-config.yaml  README.md  pyproject.toml
src/skypilot_mcp/: __init__.py  app.py  helpers.py  server.py
src/skypilot_mcp/tools/: api_server.py  cluster.py  config.py  cost.py  dag.py  infra.py  jobs.py  logs.py  managed_jobs.py  pools.py  serve.py  storage.py  volumes.py
tests/: conftest.py  test_cluster.py  test_dag.py  test_helpers.py  test_infra.py  test_jobs.py  test_logs.py  test_managed_jobs.py  test_mcp_integration.py  test_pools.py  test_serve.py  test_volumes.py
